--- a/ansible.cfg
+++ b/ansible.cfg
@@ -16,8 +16,8 @@ look_for_keys = False
 [persistent_connection]
 connect_timeout = 60
 
-# [privilege_escalation]
-# become = true
-# become_method = sudo
-# become_user = root
-# become_ask_pass = false
+[privilege_escalation]
+become = true
+become_method = sudo
+become_user = root
+become_ask_pass = false
